--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Index.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Index.cshtml
@@ -11,7 +11,7 @@
         <button type="button" class="btn btn-default" onclick="LoadAddForm()">+</button>
     </div>
     <br />
-    <div id="tree_con"></div>
+    <div id="tree_con" style="direction: rtl"></div>
 </div>
 
 <div class="col-lg-6">
