--- a/Squirrel/Squirrel.Web/Content/themes/vone/fonts.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/fonts.css
@@ -60,11 +60,21 @@
 
 @font-face {
   font-family: 'irsans';
-  src: url('fonts/IRSans/IIRANSansLE.eot?#') format('eot'),   
-       url('fonts/IRSans/IIRANSansLE.woff2') format('woff2'), 
-       url('fonts/IRSans/IIRANSansLE.woff') format('woff'),
+  src: url('fonts/IRSans/IRANSansLE.eot?#') format('eot'),   
+       url('fonts/IRSans/IRANSansLE.woff2') format('woff2'), 
+       url('fonts/IRSans/IRANSansLE.woff') format('woff'),
        url('fonts/IranSansZ/iransansz-webfont.svg#IranSansZ') format('svg');
   font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'irsans';
+  src: url('fonts/IRSans/IRANSans.eot?#') format('eot'),   
+       url('fonts/IRSans/IRANSans.woff2') format('woff2'), 
+       url('fonts/IRSans/IRANSans.woff') format('woff'),
+       url('fonts/IranSansZ/iransansz-webfont.svg#IranSansZ') format('svg');
+  font-weight: 500;
   font-style: normal;
 }
 
