--- a/Squirrel/Squirrel.Web/Content/themes/vone/main.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/main.css
@@ -28,6 +28,23 @@ html body {
   font: 20px irsans;
   color: #464646;
 }
+html a {
+  text-decoration: none;
+}
+html a:hover {
+  text-decoration: none;
+}
+@media (max-width: 767px) {
+  html {
+    height: 100%;
+    direction: rtl;
+  }
+  html body {
+    height: 100%;
+    font: 16px irsans;
+    color: #464646;
+  }
+}
 .clearbox {
   clear: both;
 }
@@ -157,9 +174,10 @@ html body {
   padding-bottom: 30px;
 }
 .button {
+  display: inline-block;
   margin: 0;
-  padding: 0 25px;
-  border: none;
+  padding: 0 40px;
+  border: 1px solid #cccccc;
   cursor: pointer;
   height: 44px;
   line-height: 44px;
@@ -167,10 +185,18 @@ html body {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   vertical-align: middle;
-  font-size: .9em;
-  border-radius: 2px;
-  background-color: #a1a1a1;
-  color: #ffffff;
+  font-size: .7em;
+  border-radius: 0;
+  background-color: transparent;
+  color: #b7b7b7;
+}
+.button.gold {
+  border-color: #d5c088;
+  color: #c6af73;
+}
+.button:hover {
+  border-color: #d7d7d7;
+  color: #cccccc;
 }
 .button:focus {
   outline: none;
@@ -181,69 +207,46 @@ html body {
 .button.large {
   height: 54px;
   line-height: 54px;
+  font-size: .8em;
 }
-.button.action {
-  font: 20px pe7;
-  font-size: 28px;
-  line-height: 44px;
+.button.tile {
   padding: 0;
   width: 44px;
-  border-radius: 44px;
-  box-shadow: 0 3px 5px 0 rgba(44, 62, 80, 0.2);
-  -moz-transition: box-shadow, background-color linear, linear 0.1s;
-  -o-transition: box-shadow, background-color linear, linear 0.1s;
-  -webkit-transition: box-shadow, background-color linear, linear 0.1s;
-  transition: box-shadow, background-color linear, linear 0.1s;
+  text-align: center;
 }
-.button.action.large {
-  width: 54px;
-  line-height: 54px;
-  border-radius: 54px;
+.button.icon {
+  font: 20px pe7;
+  font-size: 24px;
+  line-height: 44px;
 }
-.button.action:active {
-  box-shadow: 0 0 5px 0 rgba(44, 62, 80, 0.2);
+.button-hline {
+  position: relative;
+  margin-top: 40px;
+  text-align: center;
 }
-.button.primary {
-  background-color: #d5c088;
-  color: #ffffff;
-}
-.button.primary:hover {
-  background-color: #c6af73;
-}
-.button.secondary1 {
-  background-color: #675388;
-  color: #ffffff;
-}
-.button.secondary1:hover {
-  background-color: #513b75;
-}
-.button.secondary2 {
-  background-color: #668390;
-  color: #ffffff;
-}
-.button.secondary2:hover {
-  background-color: #4b6f7e;
-}
-.button.complement {
-  background-color: #89ea74;
-  color: #ffffff;
-}
-.button.complement:hover {
-  background-color: #73e15b;
-}
-.divider-right-1 {
-  width: 100px;
-  height: 4px;
-  background-color: #b0bfc5;
-  border-radius: 2px;
-  margin: 20px 0;
-}
-.divider-full-1 {
+.button-hline .line {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
   width: 100%;
-  height: 2px;
-  border-bottom: 1px solid #eeeeee;
-  background-color: #d7d7d7;
-  margin: 20px 0;
+  height: 1px;
+  background-color: #cccccc;
+  z-index: -1;
+}
+.button-hline .button-con {
+  display: inline-block;
+  background-color: #ffffff;
+  padding: 0 10px;
+}
+.button-hline.gold .line {
+  background-color: #d5c088;
+}
+.divider-blank-70 {
+  width: 100%;
+  height: 70px;
 }
 .message-box {
   background-color: #eeeeee;
@@ -279,6 +282,23 @@ html body {
 }
 .message-box.error .msg-text {
   color: #636363;
+}
+.paging-box {
+  text-align: center;
+  direction: ltr;
+}
+.paging-box .current {
+  border-color: #e1e1e1;
+  background-color: #e1e1e1;
+  color: #a1a1a1;
+  cursor: default;
+}
+.line-box {
+  display: block;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #e1e1e1;
 }
 /* ------ */
 .body-container {
@@ -334,7 +354,8 @@ html body {
   font-size: 1.1em;
 }
 .body-container .main-container {
-  margin: 70px 0;
+  margin-top: 70px;
+  margin-bottom: 70px;
 }
 .body-container .footer-container {
   position: absolute;
@@ -356,6 +377,94 @@ html body {
 }
 .body-container .footer-container .footer-text.poweredby {
   text-align: left;
+}
+.top-post-home {
+  position: relative;
+}
+.top-post-home img {
+  width: 100%;
+}
+.top-post-home .header {
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 15px 30px 30px;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+}
+.top-post-home .header .info {
+  font-size: 0.65em;
+  line-height: 25px;
+  padding-bottom: 20px;
+}
+.top-post-home .header .info span {
+  color: #d5c088;
+}
+.top-post-home .header .topic {
+  line-height: 38px;
+}
+.topic-item-home {
+  text-align: center;
+}
+.topic-item-home .image {
+  position: relative;
+  z-index: -1;
+}
+.topic-item-home .image img {
+  width: 100%;
+}
+.topic-item-home .topic {
+  font-weight: 500;
+  line-height: 38px;
+  padding-bottom: 71px;
+}
+.topic-item-home .content {
+  background-color: #ffffff;
+  margin: auto;
+  margin-top: -71px;
+  width: 88%;
+}
+.topic-item-home .content .categroy {
+  font-size: .6em;
+  font-weight: 500;
+  margin: 20px 5px 15px;
+  border-right: 4px solid #d5c088;
+  color: #252525;
+  text-align: right;
+  padding-right: 5px;
+  line-height: 17px;
+}
+.topic-item-home .content .author {
+  font-size: .6em;
+  font-weight: 500;
+  margin: 20px 5px 15px;
+  color: #252525;
+  text-align: left;
+  line-height: 17px;
+}
+.topic-item-home .content .author .name {
+  color: #b9a161;
+}
+.topic-item-home .content .title {
+  font-weight: 500;
+  line-height: 38px;
+}
+.topic-item-home .content .abstract {
+  font-size: .7em;
+  text-align: right;
+  line-height: 28px;
+  padding-top: 40px;
+}
+.topic-item-home .more {
+  margin-top: 40px;
+}
+.sidebar {
+  margin-right: 40px;
 }
 .post-i-con .main-pic {
   overflow: hidden;
