--- a/Squirrel/Squirrel.Web/Content/themes/vone/main.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/main.less
@@ -1,4 +1,5 @@
 ﻿@mainFont: 20px irsans;
+@mainFont-SmallScreen: 16px irsans;
 @smallFont: 13px tahoma;
 @glyphFont: 20px pe7;
 
@@ -23,6 +24,27 @@ html {
         font: @mainFont;
         color: @grayDark2;
     }
+
+    a {
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
+@media(max-width:767px){
+    html {
+    height: 100%;
+    direction: rtl;
+
+    body {
+        height: 100%;
+        font: @mainFont-SmallScreen;
+        color: @grayDark2;
+    }
+}
 }
 
 .clearbox {
@@ -158,18 +180,29 @@ html {
 }
 
 .button {
+    display: inline-block;
     margin: 0;
-    padding: 0 25px;
-    border: none;
+    padding: 0 40px;
+    border: 1px solid @grayLight3;
     cursor: pointer;
     height: 44px;
     line-height: 44px;
     .BorderBox();
     vertical-align: middle;
-    font-size: .9em;
-    border-radius: 2px;
-    background-color: @grayLight1;
-    color: @white;
+    font-size: .7em;
+    border-radius: 0;
+    background-color: transparent;
+    color: @grayLight2;
+
+    &.gold {
+        border-color: @primaryColor;
+        color: @primaryDarkColor;
+    }
+
+    &:hover {
+        border-color: @grayLight4;
+        color: @grayLight3;
+    }
 
     &:focus {
         outline: none;
@@ -182,80 +215,53 @@ html {
     &.large {
         height: 54px;
         line-height: 54px;
+        font-size: .8em;
     }
 
-    &.action {
-        font: @glyphFont;
-        font-size: 28px;
-        line-height: 44px;
+    &.tile {
         padding: 0;
         width: 44px;
-        border-radius: 44px;
-        box-shadow: @mainShadowDark20;
-        .Transitions(box-shadow,background-color;linear,linear;.1s);
-
-        &.large {
-            width: 54px;
-            line-height: 54px;
-            border-radius: 54px;
-        }
-
-        &:active {
-            box-shadow: @mainShadowDark20Active;
-        }
+        text-align: center;
     }
 
-    &.primary {
-        background-color: @primaryColor;
-        color: @white;
+    &.icon {
+        font: @glyphFont;
+        font-size: 24px;
+        line-height: 44px;
+    }
+}
 
-        &:hover {
-            background-color: @primaryDarkColor;
-        }
+.button-hline {
+    position: relative;
+    margin-top: 40px;
+    text-align: center;
+
+    .line {
+        position: absolute;
+        .absolutePostion(0,0,0,0);
+        margin: auto;
+        width: 100%;
+        height: 1px;
+        background-color: @grayLight3;
+        z-index: -1;
     }
 
-    &.secondary1 {
-        background-color: @secondary1DarkColor;
-        color: @white;
-
-        &:hover {
-            background-color: @secondary1DarkestColor;
-        }
+    .button-con {
+        display: inline-block;
+        background-color: @white;
+        padding: 0 10px;
     }
 
-    &.secondary2 {
-        background-color: @secondary2Color;
-        color: @white;
-
-        &:hover {
-            background-color: @secondary2DarkColor;
-        }
-    }
-
-    &.complement {
-        background-color: @complementColor;
-        color: @white;
-
-        &:hover {
-            background-color: @complementDarkColor;
+    &.gold {
+        .line {
+            background-color: @primaryColor;
         }
     }
 }
 
-.divider-right-1 {
-    width: 100px;
-    height: 4px;
-    background-color: @secondary2LightestColor;
-    border-radius: 2px;
-    margin: 20px 0;
-}
-
-.divider-full-1 {
+.divider-blank-70 {
     width: 100%;
-    height: 2px;
-    border-bottom: 1px solid @grayLight6;
-    background-color: @grayLight4;
-    margin: 20px 0;
+    height: 70px;
 }
 
 .message-box {
@@ -298,6 +304,24 @@ html {
             color: @grayDark3;
         }
     }
+}
+
+.paging-box {
+    text-align: center;
+    direction: ltr;
+
+    .current {
+        border-color: @grayLight5;
+        background-color: @grayLight5;
+        color: @grayLight1;
+        cursor: default;
+    }
+}
+
+.line-box {
+    display: block;
+    .BorderBox();
+    border: 1px solid @grayLight5;
 }
 
 /* ------ */
@@ -361,7 +385,8 @@ html {
     }
 
     .main-container {
-        margin: 70px 0;
+        margin-top: 70px;
+        margin-bottom: 70px;
     }
 
     .footer-container {
@@ -374,7 +399,7 @@ html {
             font-size: .6em;
             font-style: italic;
             color: @grayDark3;
-             line-height: 50px;
+            line-height: 50px;
 
             .important {
                 color: @primaryDarkColor;
@@ -386,6 +411,123 @@ html {
         }
     }
 }
+
+.top-post-home {
+    position: relative;
+
+    img {
+        width: 100%;
+    }
+
+    .header {
+        position: absolute;
+        .absolutePostion(auto,0,0,0);
+        .BorderBox();
+        padding: 15px 30px 30px;
+        background-color: rgba(0,0,0,.4);
+        color: @white;
+
+        .info {
+            font-size: 0.65em;
+            line-height: 25px;
+            padding-bottom: 20px;
+
+            span {
+                color: @primaryColor;
+            }
+        }
+
+        .topic {
+            line-height: 38px;
+        }
+    }
+}
+
+.topic-item-home {
+    text-align: center;
+
+    .image {
+        position: relative;
+        z-index: -1;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .topic {
+        font-weight: 500;
+        line-height: 38px;
+        padding-bottom: 71px;
+    }
+
+    .content {
+        background-color: @white;
+        margin: auto;
+        margin-top: -71px;
+        width: 88%;
+
+        .categroy {
+            font-size: .6em;
+            font-weight: 500;
+            margin: 20px 5px 15px;
+            border-right: 4px solid @primaryColor;
+            color: @grayDark1;
+            text-align: right;
+            padding-right: 5px;
+            line-height: 17px;
+        }
+
+        .author {
+            font-size: .6em;
+            font-weight: 500;
+            margin: 20px 5px 15px;
+            color: @grayDark1;
+            text-align: left;
+            line-height: 17px;
+
+            .name {
+                color: @primaryDarkestColor;
+            }
+        }
+
+        .title {
+            font-weight: 500;
+            line-height: 38px;
+        }
+
+        .abstract {
+            font-size: .7em;
+            text-align: right;
+            line-height: 28px;
+            padding-top: 40px;
+        }
+    }
+
+    .more {
+        margin-top: 40px;
+    }
+}
+
+.sidebar {
+    margin-right: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .post-i-con {
     .main-pic {
