--- a/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿@using Squirrel.Web.Models
+<div class="row">
     <div class ="col-sm-5">
         <div class="header-logo">
             <span class="sitename">
@@ -12,13 +13,14 @@
             </span>
         </div>
     </div>
-    <div class ="col-sm-7">
+    <div class ="col-sm-7 hidden-xs">
         <div class="header-menu">
             <div class="item glyphbox">&#xe618</div>
-            <div class="item">بازی</div>
-            <div class="item">برنامه نویسی</div>
-            <div class="item">تکنولوژی</div>
-            <div class="item">فیلم</div>
+            @foreach (var cat in CachedAppData.PublishedMainCategories.Items.OrderBy(x => x.ChildTopicCount + x.TopicCount))
+            {
+                var item = cat;
+                <div class="item">@Html.DisplayFor(m => item.Name)</div>
+            }
             <div class="item glyphbox">&#xe648</div>
             <div class="clearbox"></div>
         </div>
