--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
@@ -1,4 +1,5 @@
 ﻿@grayDark1: #252525;
+@grayDark1-1: #353535;
 @grayDark2: #464646;
 @grayDark3: #636363;
 @grayDark4: #7d7d7d;
@@ -13,43 +14,24 @@
 @grayLight7: #F5F5F5;
 @white: #fff;
 
-/*@primaryLightestColor: #FFF1CC;
-@primaryLightColor: #E4D19E;
-@primaryColor: #C6AF73;
-@primaryDarkColor: #AC9251;
-@primaryDarkestColor: #927836;*/
-@primaryLightestColor: #F3E3B6;
-@primaryLightColor: #E4D19E;
-@primaryColor: #D5C088;
-@primaryDarkColor: #C6AF73;
-@primaryDarkestColor: #B9A161;
-@secondary1LightestColor: #C0B7CE;
-@secondary1LightColor: #9C90B1;
-@secondary1Color: #80709C;
-@secondary1DarkColor: #675388;
-@secondary1DarkestColor: #513B75;
-@secondary2LightestColor: #B0BFC5;
-@secondary2LightColor: #859BA5;
-@secondary2Color: #668390;
-@secondary2DarkColor: #4B6F7E;
-@secondary2DarkestColor: #355C6D;
-/*@primaryColor: #FB7D89;
-@primaryLightColor: #FC97A1;
-@primaryLightestColor: #FDB5BC;
-@primaryDarkColor: #F96573;
-@primaryDarkestColor: #F74F5F;
-@secondary1Color: #FFB47F;
-@secondary1LightColor: #FFC399;
-@secondary1LightestColor: #FFD4B6;
-@secondary1DarkColor: #FFA667;
-@secondary1DarkestColor: #FF9A52;
-@secondary2Color: #67CFC1;
-@secondary2LightColor: #86DFD3;
-@secondary2LightestColor: #A9EDE4;
-@secondary2DarkColor: #4CBCAD;
-@secondary2DarkestColor: #36A898;*/
-@complementColor: #89EA74;
-@complementLightColor: #A1F191;
-@complementLightestColor: #BDF7B1;
-@complementDarkColor: #73E15B;
-@complementDarkestColor: #5FD845;
+
+@primaryLightestColor: #ACDDC1;
+@primaryLightColor: #79a38c;
+@primaryColor: #538167;
+@primaryDarkColor: #37634A;
+@primaryDarkestColor: #1F5436;
+/*@secondary1LightestColor: #A1B6C0;
+@secondary1LightColor: #7793A0;
+@secondary1Color: #597C8D;
+@secondary1DarkColor: #3F6679;
+@secondary1DarkestColor: #2A5367;
+@secondary2LightestColor: #FFEBD4;
+@secondary2LightColor: #FDDDB8;
+@secondary2Color: #DFB789;
+@secondary2DarkColor: #C0925E;
+@secondary2DarkestColor: #A4743E;
+@complementLightestColor: #FFDDD4;
+@complementLightColor: #FDC7B8;
+@complementColor: #DF9A89;
+@complementDarkColor: #C0725E;
+@complementDarkestColor: #A4533E;*/
