--- a/Squirrel/Squirrel.Web/Views/Shared/_Footer.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Footer.cshtml
@@ -1,23 +1,25 @@
 ﻿@using Squirrel.Utility.FarsiTools
 
-<div class="row">
-    <div class="col-sm-6 hidden-xs">
-        <div class="footer-text">
-            © سایت
-            <span class="important">سنجاب</span>
-            @(((PersianDate)DateTime.Now).Year.FaDigit())
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 hidden-xs">
+            <div class="footer-text">
+                © سایت
+                <span class="important">سنجاب</span>
+                @(((PersianDate)DateTime.Now).Year.FaDigit())
+            </div>
         </div>
-    </div>
-    <div class="col-sm-6 hidden-xs">
-        <div class="footer-text poweredby">
-            طراحی و توسعه توسط
-            <span class="important">ادمین محترم</span>
+        <div class="col-sm-6 hidden-xs">
+            <div class="footer-text poweredby">
+                طراحی و توسعه توسط
+                <span class="important">ادمین محترم</span>
+            </div>
         </div>
-    </div>
-    <div class="col-sm-12 visible-xs">
-        <div class="footer-text poweredby" style="text-align: center;">
-            طراحی و توسعه توسط
-            <span class="important">ادمین محترم</span>
+        <div class="col-sm-12 visible-xs">
+            <div class="footer-text poweredby" style="text-align: center;">
+                طراحی و توسعه توسط
+                <span class="important">ادمین محترم</span>
+            </div>
         </div>
     </div>
 </div>
