--- a/Squirrel/Squirrel.Web/Views/Home/Index_TopicItem.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Home/Index_TopicItem.cshtml
@@ -7,86 +7,51 @@
     var imageAddress = Model.ImageAddress();
 }
 
-
-<div class="topic-item-home">
-    @if (imageAddress.IsNotEmpty())
-    {
-        <div class="image">
-            <img src="@Url.Content(imageAddress)" alt="@Model.Title" />
-        </div>
-    }
-    else
-    {
-        <div class="topic">
-            @Html.DisplayFor(m => m.Title).FaDigit()
-        </div>
-    }
-    
-    <div class="content">
-        <div class="col-sm-4 hidden-xs">
-            <div class="categroy">
-                @Html.DisplayFor(m => m.Category.Name)
-            </div>
-        </div>
-        <div class="col-sm-8 hidden-xs">
-            <div class="author">
-                @if (Model.PublishDate.HasValue)
-                {
-                    PersianDate publishDate = Model.PublishDate.Value;
-                    <span>
-                        @Html.DisplayFor(m => publishDate.Year).FaDigit()
-                        ،
-                        @Html.DisplayFor(m => publishDate.Day).FaDigit()
-                        @PersianDateTools.JalaliMonth(publishDate.Month)
-                    </span>
-                }
-                توسط
-                <span class="name">
-                    @Model.Owner.ShowName()
-                </span>
-            </div>
-        </div>
-        <div class="col-xm-12 visible-xs" style="overflow: hidden;">
-            <div class="author" style="text-align: center;">
-                @if (Model.PublishDate.HasValue)
-                {
-                    PersianDate publishDate = Model.PublishDate.Value;
-                    <span>
-                        @Html.DisplayFor(m => publishDate.Year).FaDigit()
-                        ،
-                        @Html.DisplayFor(m => publishDate.Day).FaDigit()
-                        @PersianDateTools.JalaliMonth(publishDate.Month)
-                    </span>
-                }
-                توسط
-                <span class="name">
-                    @Model.Owner.ShowName()
-                </span>
-            </div>
-        </div>
+<div class="topic-con flatbox-shadow">
+    <div class="category">
+        <span class="rightline"></span>
+        <a class="text" href="@Url.Action("Category", "Issues", new { id = Model.Category.Name })">
+            @Html.DisplayFor(m => m.Category.Name)
+        </a>
+        <span class="leftline"></span>
+    </div>
+    <a class="title" href="@Url.Action("Index", "Issue", new { id = Model.IssueId })">
+        @Html.DisplayFor(m => m.Title).FaDigit()
+    </a>
+    <a class="image" href="@Url.Action("Index", "Issue", new { id = Model.IssueId })">
         @if (imageAddress.IsNotEmpty())
         {
-            <div class="col-sm-12">
-                <div class="title">
-                    @Html.DisplayFor(m => m.Title).FaDigit()
-                </div>
-            </div>
+            <img src="@Url.Content(imageAddress)" alt="@Model.Title" />
         }
-        <div class="col-sm-12">
-            <div class="abstract">
-                @Model.Abstarct()
-            </div>
+    </a>
+
+    @if (Model.Abstarct().IsNotEmpty())
+    {
+        <div class="abstract hidden-xs">
+            @Model.Abstarct()
         </div>
-        <div class="clearbox"></div>
+    }
+
+    <div class="author">
+        @if (Model.PublishDate.HasValue)
+        {
+            PersianDate publishDate = Model.PublishDate.Value;
+            <span>
+                @Html.DisplayFor(m => publishDate.Year).FaDigit()
+                ،
+                @Html.DisplayFor(m => publishDate.Day).FaDigit()
+                @PersianDateTools.JalaliMonth(publishDate.Month)
+            </span>
+        }
+        توسط
+        <a class="name" href="@Url.Action("User", "Issues", new { id = Model.Owner.Username })">
+            @Model.Owner.ShowName()
+        </a>
     </div>
 
-    <div class="more">
-        <div class="button-hline gold">
-            <div class="line"></div>
-            <div class="button-con">
-                <a class="button gold">ادامه</a>
-            </div>
-        </div>
+    <div class="continue">
+        <a class="glyphbox" href="@Url.Action("Index", "Issue", new { id = Model.IssueId })">
+            &#xe688
+        </a>
     </div>
 </div>
-<div class="divider-blank-70"></div>
