--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
@@ -20,18 +20,19 @@
 @primaryColor: #538167;
 @primaryDarkColor: #37634A;
 @primaryDarkestColor: #1F5436;
-/*@secondary1LightestColor: #A1B6C0;
-@secondary1LightColor: #7793A0;
-@secondary1Color: #597C8D;
-@secondary1DarkColor: #3F6679;
-@secondary1DarkestColor: #2A5367;
-@secondary2LightestColor: #FFEBD4;
-@secondary2LightColor: #FDDDB8;
-@secondary2Color: #DFB789;
-@secondary2DarkColor: #C0925E;
-@secondary2DarkestColor: #A4743E;
-@complementLightestColor: #FFDDD4;
+@secondary1LightestColor: #DDE7EC;
+@secondary1LightColor: #AFC4CF;
+@secondary1Color: #7C9CAB;
+@secondary1DarkColor: #537B8F;
+@secondary1DarkestColor: #305D73;
+@secondary2LightestColor: #F1DAE3;
+@secondary2LightColor: #E4B5C6;
+@secondary2Color: #CA859F;
+@secondary2DarkColor: #A95675;
+@secondary2DarkestColor: #8A3252;
+/*@complementLightestColor: #FFDDD4;
 @complementLightColor: #FDC7B8;
 @complementColor: #DF9A89;
 @complementDarkColor: #C0725E;
 @complementDarkestColor: #A4533E;*/
+@validationColor: #ea8f73;
