--- a/Squirrel/Squirrel.Web/Content/themes/vone/main.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/main.css
@@ -1,4 +1,9 @@
-﻿/* ------ */
+﻿/*@complementLightestColor: #FFDDD4;
+@complementLightColor: #FDC7B8;
+@complementColor: #DF9A89;
+@complementDarkColor: #C0725E;
+@complementDarkestColor: #A4533E;*/
+/* ------ */
 html {
   height: 100%;
   direction: rtl;
@@ -24,12 +29,19 @@ html a:hover {
 html a:active {
   text-decoration: none;
 }
+html a:focus {
+  text-decoration: none;
+}
 .clearbox {
   clear: both;
 }
 .glyphbox {
   font: 20px pe7;
   text-align: center;
+}
+.flatbox {
+  background: #fff;
+  padding: 30px;
 }
 .flatbox-shadow {
   background: #fff;
@@ -43,12 +55,23 @@ html a:active {
   color: #a1a1a1;
   padding-bottom: 30px;
 }
+.flatbox-shadow .hline {
+  height: 1px;
+  margin: 30px 0;
+  background-color: #eeeeee;
+}
 .flatbox-shadow .hline-full {
   height: 1px;
   margin: 30px -30px;
   background-color: #eeeeee;
 }
+.divider-blank30 {
+  display: block;
+  width: 100%;
+  height: 30px;
+}
 .divider-blank50 {
+  display: block;
   width: 100%;
   height: 50px;
 }
@@ -77,10 +100,6 @@ html a:active {
   background-color: #eeeeee;
   color: #464646;
   outline: none;
-}
-.textbox.input-validation-error,
-.textarea.input-validation-error {
-  border-right: 10px solid #79a38c;
 }
 .textbox.inline,
 .textarea.inline {
@@ -113,14 +132,32 @@ html a:active {
 .textarea.height3 {
   height: 192px;
 }
+.form-row {
+  margin-bottom: 30px;
+}
 .materialtext {
   position: relative;
   display: inline-block;
   vertical-align: middle;
   width: 100%;
-  border-bottom: 1px solid #959595;
+  border-bottom: 1px solid #cccccc;
   padding: 15px 0 1px 0;
   line-height: 0;
+}
+.materialtext:after {
+  content: "";
+  position: absolute;
+  top: auto;
+  right: auto;
+  bottom: -1px;
+  left: 0;
+  height: 2px;
+  width: 0;
+  background-color: #79a38c;
+  -moz-transition: width linear 0.2s;
+  -o-transition: width linear 0.2s;
+  -webkit-transition: width linear 0.2s;
+  transition: width linear 0.2s;
 }
 .materialtext .title {
   position: absolute;
@@ -136,20 +173,28 @@ html a:active {
   -o-transition: line-height, font-size linear, linear 0.1s;
   -webkit-transition: line-height, font-size linear, linear 0.1s;
   transition: line-height, font-size linear, linear 0.1s;
+  height: 48px;
+  overflow: hidden;
 }
-.materialtext .textbox {
+.materialtext .textbox,
+.materialtext .textarea {
   background-color: transparent;
   position: relative;
   z-index: 2;
   padding: 0;
   height: 33px;
 }
-.materialtext.focus {
-  border-bottom: 2px solid #538167;
-  padding-bottom: 0;
+.materialtext .textarea {
+  line-height: 33px;
+}
+.materialtext.focus:after {
+  width: 100%;
+}
+.materialtext.focus .textarea {
+  height: 100px;
 }
 .materialtext.value .title {
-  font-size: .55em;
+  font-size: .5em;
   line-height: 15px;
 }
 .materialtext.hasbtn {
@@ -164,7 +209,25 @@ html a:active {
   height: 36px;
   line-height: 36px;
   width: 36px;
+}
+.materialtext.hasbtn .button.glyphbox {
   font-size: 26px;
+}
+.materialtext.hascaptcha {
+  padding-left: 140px;
+}
+.materialtext.hascaptcha .captcha-con {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  height: 47px;
+  width: 130px;
+}
+.material-validation {
+  font-size: .6em;
+  line-height: 20px;
+  color: #ea8f73;
 }
 .button {
   display: inline-block;
@@ -183,10 +246,10 @@ html a:active {
   border-radius: 2px;
   background-color: #538167;
   color: #f5f5f5;
-  -moz-transition: background-color linear 0.2s;
-  -o-transition: background-color linear 0.2s;
-  -webkit-transition: background-color linear 0.2s;
-  transition: background-color linear 0.2s;
+  -moz-transition: background-color, border-color linear, linear 0.2s;
+  -o-transition: background-color, border-color linear, linear 0.2s;
+  -webkit-transition: background-color, border-color linear, linear 0.2s;
+  transition: background-color, border-color linear, linear 0.2s;
 }
 .button .glyphbox {
   font-size: 24px;
@@ -194,14 +257,32 @@ html a:active {
   vertical-align: middle;
 }
 .button:hover {
-  background-color: #79a38c;
+  background-color: #37634a;
+  color: #f5f5f5;
+}
+.button:active {
   color: #f5f5f5;
 }
 .button:focus {
   outline: none;
+  color: #f5f5f5;
 }
 .button.inline {
-  margin-left: 15px;
+  margin-bottom: 15px;
+}
+.button.icon {
+  font: 20px pe7;
+  font-size: 26px;
+  line-height: 44px;
+}
+.button.line {
+  background-color: transparent;
+  color: #898989;
+  border: 1px solid #b7b7b7;
+}
+.button.line:hover {
+  border-color: #538167;
+  color: #538167;
 }
 .button.large {
   height: 54px;
@@ -214,11 +295,6 @@ html a:active {
 .button.tile {
   padding: 0;
   width: 44px;
-}
-.button.icon {
-  font: 20px pe7;
-  font-size: 26px;
-  line-height: 44px;
 }
 .pager {
   line-height: 0;
@@ -255,6 +331,68 @@ html a:active {
   background-color: #464646;
   color: #f5f5f5;
   cursor: default;
+}
+.pager .far {
+  display: inline-block;
+  background-color: transparent;
+  color: #cccccc;
+  font-size: 26px;
+  line-height: 48px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  overflow: hidden;
+}
+.message-box {
+  background-color: #eeeeee;
+  border-radius: 2px;
+  position: relative;
+  color: #636363;
+  padding: 15px 30px;
+  text-align: right;
+}
+.message-box .msg-close {
+  position: absolute;
+  top: 10px;
+  right: auto;
+  bottom: auto;
+  left: 10px;
+  font-size: 26px;
+  line-height: 30px;
+  cursor: pointer;
+}
+.message-box .msg-topic {
+  padding-bottom: 10px;
+  font-size: .95em;
+  line-height: 40px;
+}
+.message-box .msg-text {
+  font-size: .7em;
+  line-height: 30px;
+}
+.message-box.error {
+  background-color: #f1dae3;
+}
+.message-box.error .msg-close {
+  color: #ca859f;
+}
+.message-box.error .msg-topic {
+  color: #a95675;
+}
+.message-box.error .msg-text {
+  color: #636363;
+}
+.message-box.success {
+  background-color: #dde7ec;
+}
+.message-box.success .msg-close {
+  color: #7c9cab;
+}
+.message-box.success .msg-topic {
+  color: #537b8f;
+}
+.message-box.success .msg-text {
+  color: #636363;
 }
 .activeflat {
   position: relative;
@@ -341,27 +479,6 @@ html a:active {
 }
 .button-hline.gold .line {
   background-color: #538167;
-}
-.message-box {
-  background-color: #eeeeee;
-  border-radius: 3px;
-  position: relative;
-  color: #636363;
-  padding: 15px 30px;
-  line-height: 30px;
-  text-align: right;
-}
-.message-box .msg-close {
-  position: absolute;
-  top: 10px;
-  right: auto;
-  bottom: auto;
-  left: 10px;
-  font-size: 26px;
-  cursor: pointer;
-}
-.message-box .msg-text {
-  font-size: .8em;
 }
 .paging-box {
   text-align: center;
@@ -909,6 +1026,394 @@ body .overheader .container .header-container .header-search .searchbox:before {
 .sidebar .sidebar-tags .item:hover {
   color: #79a38c;
   border-bottom-color: #79a38c;
+}
+.sidebar.issuepage {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.issuepage-firstimage {
+  padding: 25px 10px 0 10px;
+}
+.issuepage-firstimage .image img {
+  width: 100%;
+}
+.issuepage-posts {
+  margin: 50px 10px 50px 10px;
+}
+.issuepage-posts .post .category {
+  text-align: center;
+  line-height: 0;
+  padding: 10px 0 5px 0;
+}
+.issuepage-posts .post .category span,
+.issuepage-posts .post .category a {
+  display: inline-block;
+}
+.issuepage-posts .post .category .text {
+  font-size: .75em;
+  color: #b7b7b7;
+  line-height: 30px;
+  vertical-align: middle;
+}
+.issuepage-posts .post .category .text:hover {
+  color: #538167;
+}
+.issuepage-posts .post .category .rightline,
+.issuepage-posts .post .category .leftline {
+  position: relative;
+  width: 1px;
+  height: 30px;
+  line-height: 30px;
+  vertical-align: middle;
+}
+.issuepage-posts .post .category .rightline:before,
+.issuepage-posts .post .category .leftline:before,
+.issuepage-posts .post .category .rightline:after,
+.issuepage-posts .post .category .leftline:after {
+  content: "";
+  position: absolute;
+  background-color: #d7d7d7;
+  height: 1px;
+}
+.issuepage-posts .post .category .rightline:before,
+.issuepage-posts .post .category .leftline:before {
+  width: 85px;
+  top: 12px;
+}
+.issuepage-posts .post .category .rightline:after,
+.issuepage-posts .post .category .leftline:after {
+  width: 70px;
+  top: 18px;
+}
+.issuepage-posts .post .category .rightline:before,
+.issuepage-posts .post .category .rightline:after {
+  left: 0;
+}
+.issuepage-posts .post .category .leftline:before,
+.issuepage-posts .post .category .leftline:after {
+  right: 0;
+}
+.issuepage-posts .post .title {
+  display: block;
+  text-align: center;
+  color: #464646;
+  font-size: 1.2em;
+  line-height: 40px;
+  padding: 0 0 40px 0;
+  font-weight: 600;
+}
+.issuepage-posts .post .headimage {
+  margin: -20px 0 25px 0;
+}
+.issuepage-posts .post .headimage img {
+  width: 100%;
+}
+.issuepage-posts .post .content > p {
+  font-weight: 300;
+  font-size: .8em;
+  line-height: 35px;
+  margin-bottom: 15px;
+}
+.issuepage-posts .post .content > p a {
+  color: #79a38c;
+  border-bottom: 1px dotted #79a38c;
+}
+.issuepage-posts .post .content > p a:hover {
+  color: #b7b7b7;
+  border-bottom-width: 0;
+}
+.issuepage-posts .post .content blockquote {
+  position: relative;
+  font-size: .7em;
+  font-style: italic;
+  color: #7d7d7d;
+  padding: 10px 50px;
+  border: none;
+}
+.issuepage-posts .post .content blockquote:before {
+  content: '،،';
+  color: #e1e1e1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: auto;
+  left: auto;
+  font-size: 3.5em;
+  -webkit-transform: rotateZ(180deg);
+  -moz-transform: rotateZ(180deg);
+  -ms-transform: rotateZ(180deg);
+  -o-transform: rotateZ(180deg);
+  transform: rotateZ(180deg);
+  height: 50px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.issuepage-posts .post .content blockquote:after {
+  content: '،،';
+  color: #e1e1e1;
+  position: absolute;
+  top: auto;
+  right: auto;
+  bottom: 0;
+  left: 0;
+  font-size: 3.5em;
+  height: 50px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.issuepage-posts .post .content blockquote > p {
+  margin-bottom: 0;
+  text-align: justify;
+  line-height: 30px;
+}
+.issuepage-posts .post .tags {
+  padding: 50px 30px 0 0;
+  position: relative;
+  line-height: 25px;
+}
+.issuepage-posts .post .tags .item {
+  font-size: .65em;
+  display: inline-block;
+  vertical-align: middle;
+  color: #464646;
+}
+.issuepage-posts .post .tags .item:hover {
+  color: #79a38c;
+}
+.issuepage-posts .post .tags .item:after {
+  content: "،";
+}
+.issuepage-posts .post .tags:before {
+  content: "";
+  position: absolute;
+  top: 50px;
+  right: 0;
+  bottom: auto;
+  left: auto;
+  font: 20px pe7;
+  line-height: 25px;
+  text-align: center;
+}
+.issuepage-posts .post .attachments {
+  padding: 20px;
+  background-color: #eeeeee;
+  margin-top: 50px;
+}
+.issuepage-posts .post .attachments .item {
+  font-size: .65em;
+  display: block;
+  line-height: 27px;
+  position: relative;
+  padding-right: 30px;
+}
+.issuepage-posts .post .attachments .item a {
+  color: #464646;
+}
+.issuepage-posts .post .attachments .item a:hover {
+  color: #79a38c;
+}
+.issuepage-posts .post .attachments .item:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: auto;
+  left: auto;
+  font: 20px pe7;
+  font-size: 25px;
+  line-height: 27px;
+  text-align: center;
+}
+.issuepage-posts .post .info {
+  font-size: .65em;
+}
+.issuepage-posts .post .info .avatar {
+  float: right;
+  height: 70px;
+  margin-left: 20px;
+  display: block;
+  overflow: hidden;
+  border-radius: 100%;
+}
+.issuepage-posts .post .info .avatar img {
+  height: 100%;
+}
+.issuepage-posts .post .info .data {
+  float: right;
+  height: 70px;
+}
+.issuepage-posts .post .info .data .author {
+  line-height: 35px;
+}
+.issuepage-posts .post .info .data a {
+  color: #79a38c;
+}
+.issuepage-posts .post .info .data a:hover {
+  color: #37634a;
+}
+.issuepage-posts .post .info .data .date {
+  line-height: 35px;
+}
+.issuepage-posts .post.firstpost .headimage {
+  display: none;
+}
+.issuepage-posts .comments .topic {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  padding-bottom: 30px;
+}
+.issuepage-posts .comments .comment {
+  font-size: .8em;
+}
+.issuepage-posts .comments .comment .avatar {
+  background-color: #eeeeee;
+  width: 64px;
+  height: 64px;
+  line-height: 64px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.issuepage-posts .comments .comment .avatar img {
+  width: 100%;
+}
+.issuepage-posts .comments .comment .name {
+  font-size: .85em;
+  line-height: 26px;
+}
+.issuepage-posts .comments .comment .date {
+  font-size: .7em;
+  color: #b7b7b7;
+  line-height: 20px;
+  padding-bottom: 10px;
+}
+.issuepage-posts .comments .comment .content {
+  font-size: .9em;
+  font-weight: 300;
+  line-height: 27px;
+}
+.issuepage-posts .comments .add-comment .add-comment-submit {
+  line-height: 44px;
+}
+.issuepage-posts .comments .add-comment .add-comment-submit .circularG-con {
+  display: none;
+}
+.issuepage-posts .neighbors .item {
+  display: block;
+  color: #464646;
+  padding: 15px;
+  margin: -15px;
+}
+.issuepage-posts .neighbors .item .top {
+  line-height: 28px;
+  margin-bottom: 10px;
+}
+.issuepage-posts .neighbors .item .top .text {
+  font-size: .7em;
+  font-weight: 300;
+  border-bottom: 1px solid;
+  display: inline-block;
+  vertical-align: middle;
+}
+.issuepage-posts .neighbors .item .bottom {
+  font-size: .8em;
+  font-weight: bold;
+  line-height: 25px;
+  max-height: 50px;
+  overflow: hidden;
+}
+.issuepage-posts .neighbors .item.rightitem {
+  text-align: right;
+}
+.issuepage-posts .neighbors .item.rightitem .top .text:before {
+  content: "";
+  font: 20px pe7;
+  font-size: 26px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.issuepage-posts .neighbors .item.leftitem {
+  text-align: left;
+}
+.issuepage-posts .neighbors .item.leftitem .top .text:after {
+  content: "";
+  font: 20px pe7;
+  font-size: 26px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.issuepage-posts .neighbors .item:hover {
+  background-color: #79a38c;
+  color: #ffffff;
+}
+.issuepage-posts .related-posts .topic {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  padding-bottom: 30px;
+}
+.issuepage-posts .related-posts .image {
+  display: block;
+  margin-bottom: 10px;
+  min-height: 10px;
+  background-color: #eeeeee;
+}
+.issuepage-posts .related-posts .image img {
+  width: 100%;
+}
+.issuepage-posts .related-posts .title {
+  display: block;
+  font-size: .65em;
+  line-height: 22px;
+  color: #464646;
+}
+.issuepage-posts .related-posts .title:hover {
+  color: #79a38c;
+}
+.issuepage-posts .related-posts .date {
+  color: #b7b7b7;
+  font-size: .6em;
+  padding-top: 5px;
+}
+.issues-con {
+  padding: 0 30px;
+}
+.issues-con .item-box {
+  margin-bottom: 30px;
+}
+.issues-con .item-box .image {
+  display: block;
+  margin-bottom: 15px;
+}
+.issues-con .item-box .image img {
+  width: 100%;
+}
+.issues-con .item-box .title {
+  display: block;
+  font-size: .9em;
+  font-weight: bold;
+  line-height: 30px;
+  color: #464646;
+}
+.issues-con .item-box .title:hover {
+  color: #79a38c;
+}
+.issues-con .item-box .date {
+  font-size: .6em;
+  color: #b7b7b7;
+  margin: 15px 0 -10px 0;
+}
+.issues-con .item-box .date span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 30px;
+}
+.issues-con .item-box .date span.glyphbox {
+  margin-right: 3px;
 }
 @media (max-width: 767px) {
   html {
