--- a/Squirrel/Squirrel.Web/Content/themes/vone/main.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/main.less
@@ -33,11 +33,16 @@ html {
         text-decoration: none;
         .Transitions(color,background-color;linear,linear;.2s);
 
+
         &:hover {
             text-decoration: none;
         }
 
         &:active {
+            text-decoration: none;
+        }
+
+        &:focus {
             text-decoration: none;
         }
     }
@@ -50,6 +55,11 @@ html {
 .glyphbox {
     font: @glyphFont;
     text-align: center;
+}
+
+.flatbox {
+    background: #fff;
+    padding: 30px;
 }
 
 .flatbox-shadow {
@@ -65,6 +75,12 @@ html {
         padding-bottom: 30px;
     }
 
+    .hline {
+        height: 1px;
+        margin: 30px 0;
+        background-color: @grayLight6;
+    }
+
     .hline-full {
         height: 1px;
         margin: 30px -30px;
@@ -72,7 +88,14 @@ html {
     }
 }
 
+.divider-blank30 {
+    display: block;
+    width: 100%;
+    height: 30px;
+}
+
 .divider-blank50 {
+    display: block;
     width: 100%;
     height: 50px;
 }
@@ -95,10 +118,6 @@ html {
         background-color: @grayLight6;
         color: @grayDark2;
         outline: none;
-    }
-
-    &.input-validation-error {
-        border-right: 10px solid @primaryLightColor;
     }
 
     &.inline {
@@ -138,14 +157,28 @@ html {
     }
 }
 
+.form-row {
+    margin-bottom: 30px;
+}
+
 .materialtext {
     position: relative;
     display: inline-block;
     vertical-align: middle;
     width: 100%;
-    border-bottom: 1px solid @grayDark6;
+    border-bottom: 1px solid @grayLight3;
     padding: 15px 0 1px 0;
     line-height: 0;
+
+    &:after {
+        content: "";
+        position: absolute;
+        .absolutePostion(auto,auto,-1px,0);
+        height: 2px;
+        width: 0;
+        background-color: @primaryLightColor;
+        .Transition(width,linear,.2s);
+    }
 
     .title {
         position: absolute;
@@ -155,9 +188,11 @@ html {
         line-height: 48px;
         color: @grayDark5;
         .Transitions(line-height,font-size;linear,linear;.1s);
+        height: 48px;
+        overflow: hidden;
     }
 
-    .textbox {
+    .textbox, .textarea {
         background-color: transparent;
         position: relative;
         z-index: 2;
@@ -165,14 +200,23 @@ html {
         height: 33px;
     }
 
+    .textarea {
+        line-height: 33px;
+    }
+
     &.focus {
-        border-bottom: 2px solid @primaryColor;
-        padding-bottom: 0;
+        &:after {
+            width: 100%;
+        }
+
+        .textarea {
+            height: 100px;
+        }
     }
 
     &.value {
         .title {
-            font-size: .55em;
+            font-size: .5em;
             line-height: 15px;
         }
     }
@@ -186,9 +230,31 @@ html {
             height: 36px;
             line-height: 36px;
             width: 36px;
-            font-size: 26px;
+
+            &.glyphbox {
+                font-size: 26px;
+            }
         }
     }
+
+    &.hascaptcha {
+        padding-left: 140px;
+
+        .captcha-con {
+            position: absolute;
+            top: 0;
+            left: 0;
+            overflow: hidden;
+            height: 47px;
+            width: 130px;
+        }
+    }
+}
+
+.material-validation {
+    font-size: .6em;
+    line-height: 20px;
+    color: @validationColor;
 }
 
 .button {
@@ -206,7 +272,7 @@ html {
     border-radius: 2px;
     background-color: @primaryColor;
     color: @grayLight7;
-    .Transition(background-color,linear,.2s);
+    .Transitions(background-color,border-color;linear,linear;.2s);
 
     .glyphbox {
         font-size: 24px;
@@ -215,16 +281,38 @@ html {
     }
 
     &:hover {
-        background-color: @primaryLightColor;
+        background-color: @primaryDarkColor;
+        color: @grayLight7;
+    }
+
+    &:active {
         color: @grayLight7;
     }
 
     &:focus {
         outline: none;
+        color: @grayLight7;
     }
 
     &.inline {
-        margin-left: 15px;
+        margin-bottom: 15px;
+    }
+
+    &.icon {
+        font: @glyphFont;
+        font-size: 26px;
+        line-height: 44px;
+    }
+
+    &.line {
+        background-color: transparent;
+        color: @grayDark5;
+        border: 1px solid @grayLight2;
+
+        &:hover {
+            border-color: @primaryColor;
+            color: @primaryColor;
+        }
     }
 
     &.large {
@@ -240,12 +328,6 @@ html {
     &.tile {
         padding: 0;
         width: 44px;
-    }
-
-    &.icon {
-        font: @glyphFont;
-        font-size: 26px;
-        line-height: 44px;
     }
 }
 
@@ -286,6 +368,78 @@ html {
             background-color: @grayDark2;
             color: @grayLight7;
             cursor: default;
+        }
+    }
+
+    .far {
+        display: inline-block;
+        background-color: transparent;
+        color: @grayLight3;
+        font-size: 26px;
+        line-height: 48px;
+        width: 44px;
+        height: 44px;
+        text-align: center;
+        overflow: hidden;
+    }
+}
+
+.message-box {
+    background-color: @grayLight6;
+    border-radius: 2px;
+    position: relative;
+    color: @grayDark3;
+    padding: 15px 30px;
+    text-align: right;
+
+    .msg-close {
+        position: absolute;
+        .absolutePostion(10px,auto,auto,10px);
+        font-size: 26px;
+        line-height: 30px;
+        cursor: pointer;
+    }
+
+    .msg-topic {
+        padding-bottom: 10px;
+        font-size: .95em;
+        line-height: 40px;
+    }
+
+    .msg-text {
+        font-size: .7em;
+        line-height: 30px;
+    }
+
+    &.error {
+        background-color: @secondary2LightestColor;
+
+        .msg-close {
+            color: @secondary2Color;
+        }
+
+        .msg-topic {
+            color: @secondary2DarkColor;
+        }
+
+        .msg-text {
+            color: @grayDark3;
+        }
+    }
+
+    &.success {
+        background-color: @secondary1LightestColor;
+
+        .msg-close {
+            color: @secondary1Color;
+        }
+
+        .msg-topic {
+            color: @secondary1DarkColor;
+        }
+
+        .msg-text {
+            color: @grayDark3;
         }
     }
 }
@@ -382,30 +536,6 @@ html {
         .line {
             background-color: @primaryColor;
         }
-    }
-}
-
-.message-box {
-    background-color: @grayLight6;
-    border-radius: 3px;
-    position: relative;
-    color: @grayDark3;
-    padding: 15px 30px;
-    line-height: 30px;
-    text-align: right;
-
-    .msg-close {
-        position: absolute;
-        .absolutePostion(10px,auto,auto,10px);
-        font-size: 26px;
-        cursor: pointer;
-    }
-
-    .msg-topic {
-    }
-
-    .msg-text {
-        font-size: .8em;
     }
 }
 
@@ -989,6 +1119,477 @@ body {
             }
         }
     }
+
+    &.issuepage {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+}
+
+.issuepage-firstimage {
+    padding: 25px 10px 0 10px;
+
+    .image {
+        img {
+            width: 100%;
+        }
+    }
+}
+
+.issuepage-posts {
+    margin: 50px 10px 50px 10px;
+
+    .post {
+        .category {
+            text-align: center;
+            line-height: 0;
+            padding: 10px 0 5px 0;
+
+            span, a {
+                display: inline-block;
+            }
+
+            .text {
+                font-size: .75em;
+                color: @grayLight2;
+                line-height: 30px;
+                vertical-align: middle;
+
+                &:hover {
+                    color: @primaryColor;
+                }
+            }
+
+            .rightline, .leftline {
+                position: relative;
+                width: 1px;
+                height: 30px;
+                line-height: 30px;
+                vertical-align: middle;
+
+                &:before, &:after {
+                    content: "";
+                    position: absolute;
+                    background-color: @grayLight4;
+                    height: 1px;
+                }
+
+                &:before {
+                    width: 85px;
+                    top: 12px;
+                }
+
+                &:after {
+                    width: 70px;
+                    top: 18px;
+                }
+            }
+
+            .rightline {
+                &:before, &:after {
+                    left: 0;
+                }
+            }
+
+            .leftline {
+                &:before, &:after {
+                    right: 0;
+                }
+            }
+        }
+
+        .title {
+            display: block;
+            text-align: center;
+            color: @grayDark2;
+            font-size: 1.2em;
+            line-height: 40px;
+            padding: 0 0 40px 0;
+            font-weight: 600;
+        }
+
+        .headimage {
+            margin: -20px 0 25px 0;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .content {
+
+            & > p {
+                font-weight: 300;
+                font-size: .8em;
+                line-height: 35px;
+                margin-bottom: 15px;
+
+                a {
+                    color: @primaryLightColor;
+                    border-bottom: 1px dotted @primaryLightColor;
+
+                    &:hover {
+                        color: @grayLight2;
+                        border-bottom-width: 0;
+                    }
+                }
+            }
+
+            blockquote {
+                position: relative;
+                font-size: .7em;
+                font-style: italic;
+                color: @grayDark4;
+                padding: 10px 50px;
+                border: none;
+
+                &:before {
+                    content: '،،';
+                    color: @grayLight5;
+                    position: absolute;
+                    .absolutePostion(0,0,auto,auto);
+                    font-size: 3.5em;
+                    .RotateZ(180deg);
+                    height: 50px;
+                    width: 30px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                &:after {
+                    content: '،،';
+                    color: @grayLight5;
+                    position: absolute;
+                    .absolutePostion(auto,auto,0,0);
+                    font-size: 3.5em;
+                    height: 50px;
+                    width: 30px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                & > p {
+                    margin-bottom: 0;
+                    text-align: justify;
+                    line-height: 30px;
+                }
+            }
+        }
+
+        .tags {
+            padding: 50px 30px 0 0;
+            position: relative;
+            line-height: 25px;
+
+            .item {
+                font-size: .65em;
+                display: inline-block;
+                vertical-align: middle;
+                color: @grayDark2;
+
+                &:hover {
+                    color: @primaryLightColor;
+                }
+
+                &:after {
+                    content: "،";
+                }
+            }
+
+            &:before {
+                content: "";
+                position: absolute;
+                .absolutePostion(50px,0,auto,auto);
+                font: @glyphFont;
+                line-height: 25px;
+                text-align: center;
+            }
+        }
+
+        .attachments {
+            padding: 20px;
+            background-color: @grayLight6;
+            margin-top: 50px;
+
+            .item {
+                font-size: .65em;
+                display: block;
+                line-height: 27px;
+                position: relative;
+                padding-right: 30px;
+
+                a {
+                    color: @grayDark2;
+
+                    &:hover {
+                        color: @primaryLightColor;
+                    }
+                }
+
+
+
+                &:before {
+                    content: "";
+                    position: absolute;
+                    .absolutePostion(0,0,auto,auto);
+                    font: @glyphFont;
+                    font-size: 25px;
+                    line-height: 27px;
+                    text-align: center;
+                }
+            }
+        }
+
+        .info {
+            font-size: .65em;
+
+            .avatar {
+                float: right;
+                height: 70px;
+                margin-left: 20px;
+                display: block;
+                overflow: hidden;
+                border-radius: 100%;
+
+                img {
+                    height: 100%;
+                }
+            }
+
+            .data {
+                float: right;
+                height: 70px;
+
+                .author {
+                    line-height: 35px;
+                }
+
+                a {
+                    color: @primaryLightColor;
+
+                    &:hover {
+                        color: @primaryDarkColor;
+                    }
+                }
+
+                .date {
+                    line-height: 35px;
+                }
+            }
+        }
+
+        &.firstpost {
+            .headimage {
+                display: none;
+            }
+        }
+    }
+
+    .comments {
+        .topic {
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.2em;
+            padding-bottom: 30px;
+        }
+
+        .comment {
+            font-size: .8em;
+
+            .avatar {
+                background-color: @grayLight6;
+                width: 64px;
+                height: 64px;
+                line-height: 64px;
+                border-radius: 100%;
+                overflow: hidden;
+
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            .name {
+                font-size: .85em;
+                line-height: 26px;
+            }
+
+            .date {
+                font-size: .7em;
+                color: @grayLight2;
+                line-height: 20px;
+                padding-bottom: 10px;
+            }
+
+            .content {
+                font-size: .9em;
+                font-weight: 300;
+                line-height: 27px;
+            }
+        }
+
+        .add-comment {
+            .add-comment-submit {
+                line-height: 44px;
+
+                .circularG-con {
+                    display: none;
+                }
+            }
+        }
+    }
+
+    .neighbors {
+        .item {
+            display: block;
+            color: @grayDark2;
+            padding: 15px;
+            margin: -15px;
+
+            .top {
+                line-height: 28px;
+                margin-bottom: 10px;
+
+                .text {
+                    font-size: .7em;
+                    font-weight: 300;
+                    border-bottom: 1px solid;
+                    display: inline-block;
+                    vertical-align: middle;
+                }
+            }
+
+            .bottom {
+                font-size: .8em;
+                font-weight: bold;
+                line-height: 25px;
+                max-height: 50px;
+                overflow: hidden;
+            }
+
+            &.rightitem {
+                text-align: right;
+
+                .top {
+                    .text {
+                        &:before {
+                            content: "";
+                            font: @glyphFont;
+                            font-size: 26px;
+                            display: inline-block;
+                            vertical-align: middle;
+                        }
+                    }
+                }
+            }
+
+            &.leftitem {
+                text-align: left;
+
+                .top {
+                    .text {
+                        &:after {
+                            content: "";
+                            font: @glyphFont;
+                            font-size: 26px;
+                            display: inline-block;
+                            vertical-align: middle;
+                        }
+                    }
+                }
+            }
+
+            &:hover {
+                background-color: @primaryLightColor;
+                color: @white;
+            }
+        }
+    }
+
+    .related-posts {
+        .topic {
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.2em;
+            padding-bottom: 30px;
+        }
+
+        .image {
+            display: block;
+            margin-bottom: 10px;
+            min-height: 10px;
+            background-color: @grayLight6;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .title {
+            display: block;
+            font-size: .65em;
+            line-height: 22px;
+            color: @grayDark2;
+
+            &:hover {
+                color: @primaryLightColor;
+            }
+        }
+
+        .date {
+            color: @grayLight2;
+            font-size: .6em;
+            padding-top: 5px;
+        }
+    }
+}
+
+.issues-con {
+    padding: 0 30px;
+
+    .item-box {
+        margin-bottom: 30px;
+
+        .image {
+            display: block;
+            margin-bottom: 15px;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .title {
+            display: block;
+            font-size: .9em;
+            font-weight: bold;
+            line-height: 30px;
+            color: @grayDark2;
+
+            &:hover {
+                color: @primaryLightColor;
+            }
+        }
+
+        .date {
+            font-size: .6em;
+            color: @grayLight2;
+            margin: 15px 0 -10px 0;
+
+            span {
+                display: inline-block;
+                vertical-align: middle;
+                line-height: 30px;
+
+                &.glyphbox {
+                    margin-right: 3px;
+                }
+            }
+        }
+    }
 }
 
 @media(max-width:767px) {
@@ -1003,7 +1604,7 @@ body {
         }
     }
 
-    body > .container .bubble-menu, body > .overheader > .container .bubble-menu{
+    body > .container .bubble-menu, body > .overheader > .container .bubble-menu {
         right: 70px;
     }
 }
