--- a/Squirrel/Squirrel.Web/Views/Issue/Post_AddComment.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issue/Post_AddComment.cshtml
@@ -5,125 +5,149 @@
 
 <link href="@BotDetect.Web.CaptchaUrls.Absolute.LayoutStyleSheetUrl" rel="stylesheet" type="text/css" />
 
-<div class="row form-con" style="display: none;" id="add_comment_form_con">
-    @using (Ajax.BeginForm("AddComment", "Issue", null,
+<div class="topic">نظر بدهید.</div>
+
+@using (Ajax.BeginForm("AddComment", "Issue", null,
         new AjaxOptions { OnBegin = "onAddCommentBegin", OnSuccess = "onAddCommentSuccess", OnFailure = "onAddCommentError" },
-        new { }))
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(m => m.PostId)
+        new { id = "add_comment_form" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.PostId)
 
-        <div class="col-sm-12">
-            <div class="message-box error" style="margin-bottom: 30px; display: none;" id="add_comment_error">
-                <span class="msg-close glyphbox">&#xe680</span>
-                <div class="msg-topic">خطا !</div>
-                <div class="msg-text"></div>
-            </div>
+    <div>
+        <div class="materialtext">
+            <div class="title">نام خود را وارد کنید.</div>
+            @Html.TextBoxFor(m => m.Name, new { @class = "textbox", @tabindex = "1", @id = "add_comment_field_name" })
         </div>
+        <div class="material-validation">
+            @Html.ValidationMessageFor(m => m.Name)
+        </div>
+    </div>
 
-        <div class="col-sm-5">
-            <div class="formrow">
-                @Html.TextBoxFor(m => m.Name, new { @class = "textbox full", @placeholder = "نام", @tabindex = "1" })
-            </div>
-            <div class="formrow">
-                @Html.TextBoxFor(m => m.Email, new { @class = "textbox full", @placeholder = "ایمیل", @tabindex = "2" })
-            </div>
-            <div class="row">
-                <div class="col-md-5 col-sm-6 col-xs-6">
-                    <div class="formrow">
-                        <div class="captcha-con">
-                            @{ var sampleCaptcha = new MvcCaptcha("SampleCaptcha")
-                           {
-                               ImageFormat = ImageFormat.Jpeg,
-                               ImageStyle = ImageStyle.SunAndWarmAir,
-                               CodeLength = 4,
-                               CaptchaImageTooltip = "عبارت امنیتی را به درستی وارد کنید.",
-                               CodeStyle = CodeStyle.Numeric,
-                               ImageSize = new Size(138, 44),
-                           }; }
-                            @Html.Captcha(sampleCaptcha)
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-7 col-sm-6 col-xs-6">
-                    <div class="formrow">
-                        @Html.TextBoxFor(m => m.Captcha, new { @class = "textbox full", @placeholder = "عبارت امنیتی", @tabindex = "3" })
-                    </div>
-                </div>
+    <div class="divider-blank30"></div>
+
+    <div>
+        <div class="materialtext">
+            <div class="title">آدرس پست الکترونیکی خود را وارد کنید. (اختیاری)</div>
+            @Html.TextBoxFor(m => m.Email, new { @class = "textbox", @tabindex = "2", @id = "add_comment_field_email" })
+        </div>
+        <div class="material-validation">
+            @Html.ValidationMessageFor(m => m.Email)
+        </div>
+    </div>
+
+    <div class="divider-blank30"></div>
+
+    <div>
+        <div class="materialtext hascaptcha">
+            <div class="title">عبارت امنیتی را وارد کنید.</div>
+            @Html.TextBoxFor(m => m.Captcha, new { @class = "textbox", @tabindex = "3", @id = "add_comment_field_captcha" })
+            <div class="captcha-con">
+                @{ var sampleCaptcha = new MvcCaptcha("SampleCaptcha")
+                   {
+                       ImageFormat = ImageFormat.Jpeg,
+                       ImageStyle = ImageStyle.SunAndWarmAir,
+                       CodeLength = 4,
+                       CaptchaImageTooltip = "عبارت امنیتی را به درستی وارد کنید.",
+                       CodeStyle = CodeStyle.Numeric,
+                       ImageSize = new Size(130, 47),
+                   }; }
+                @Html.Captcha(sampleCaptcha)
             </div>
         </div>
-        <div class="col-sm-7">
-            <div class="formrow">
-                @Html.TextAreaFor(m => m.Body, new { @class = "textarea height3 full fix", @placeholder = "متن نظر", @tabindex = "4" })
-            </div>
+        <div class="material-validation">
+            @Html.ValidationMessageFor(m => m.Captcha)
         </div>
-        <div class="col-sm-12 submit-con" style="display: none;" id="add_comment_submit_con">
-            <button class="button action large secondary2 inline" type="submit">&#xe668</button>
-            <button class="button action large secondary1" type="button" onclick="hideAddCommentFrom()">&#xe680</button>
-            @Html.Partial("Loading", "addcomment_loading")
+    </div>
+
+    <div class="divider-blank30"></div>
+
+    <div>
+        <div class="materialtext">
+            <div class="title">نظر خود را بنویسید.</div>
+            @Html.TextAreaFor(m => m.Body, new { @class = "textarea", @tabindex = "4", @id = "add_comment_field_body" })
         </div>
-    }
+        <div class="material-validation">
+            @Html.ValidationMessageFor(m => m.Body)
+        </div>
+    </div>
+
+    <div class="divider-blank50"></div>
+
+    <div class="add-comment-submit">
+        <button class="button inline" type="submit" tabindex="5" style="width: 150px;">ثبت نظر</button>
+        <button class="button line inline" type="button" onclick="clearAddCommentFrom()" style="width: 150px;">پاک کردن</button>
+        @Html.Partial("Loading", "addcomment_loading")
+    </div>
+}
+
+<div id="add_comment_error" style="display: none;">
+    <div class="divider-blank50"></div>
+    <div class="message-box error">
+        <span class="msg-close glyphbox" onclick="$('#add_comment_error').hide()">&#xe680</span>
+        <div class="msg-topic">خطا !</div>
+        <div class="msg-text"></div>
+    </div>
 </div>
 
-<div class="button-con" id="add_comment_button_con">
-    <button class="button action large secondary2" type="button" onclick="showAddCommentFrom(this)">&#xe668</button>
-    <button class="button action large secondary1" type="button" style="display: none;">&#xe680</button>
-</div>
-
-<div class="message-box success" style="display: none;" id="add_comment_success">
-    <span class="msg-close glyphbox">&#xe680</span>
-    <div class="msg-topic">نظر شما با موفقیت ثبت شد !</div>
-    <div class="msg-text">نظر شما بعد از تائید نویسنده مطلب نمایش داده خواهد شد.</div>
+<div id="add_comment_success" style="display: none;">
+    <div class="message-box success">
+        <span class="msg-close glyphbox" onclick="$('#add_comment_success').hide()">&#xe680</span>
+        <div class="msg-topic">نظر شما با موفقیت ثبت شد !</div>
+        <div class="msg-text">نظر شما بعد از تائید نویسنده مطلب نمایش داده خواهد شد.</div>
+    </div>
 </div>
 
 
 <script type="text/javascript">
-    function showAddCommentFrom(e) {
-        $(e).addClass('inline');
-        $(e).next().show();
-        setTimeout(function () {
-            $('#add_comment_form_con').slideDown(500);
-        }, 200);
-        setTimeout(function () {
-            $('#add_comment_button_con').hide();
-            $('#add_comment_submit_con').show();
-        }, 700);
+    function clearAddCommentFrom() {
+        $('#add_comment_form input[type="text"]').val('');
+        $('#add_comment_form textarea').val('');
+        $('#add_comment_form .materialtext').removeClass('value');
+        $('#add_comment_form .field-validation-error').text('');
     }
 
-    function hideAddCommentFrom() {
-        $('#add_comment_submit_con').hide();
-        $('#add_comment_button_con').show();
-        $('#add_comment_form_con').slideUp(300);
-        setTimeout(function () {
-            $('#add_comment_button_con button:eq(0)').removeClass('inline');
-            $('#add_comment_button_con button:eq(1)').hide();
-        }, 500);
+    function loadMode() {
+        $('#addcomment_loading').show();
+        $('#addcomment_loading').prev('button').hide();
+        $('#addcomment_loading').prev('button').prev('button').hide();
+    }
+
+    function fillMode() {
+        $('#addcomment_loading').hide();
+        $('#addcomment_loading').prev('button').show();
+        $('#addcomment_loading').prev('button').prev('button').show();
     }
 
     function onAddCommentBegin() {
-        $('#addcomment_loading').show();
+        loadMode();
+        $('#add_comment_error').hide();
     }
 
     function onAddCommentError() {
-        $('#addcomment_loading').hide();
-        $('#add_comment_error .msg-text').text('هنگام ثبت نظر شما خطایی رخ داد. لطفا کمی دیرتر مجددا تلاش کنید.');
-        $('#add_comment_error').show();
-        // Reload Captcha
-        SampleCaptcha.ReloadImage();
-        $('#Captcha').val('');
-    }
-
-    function onAddCommentSuccess(data) {
-        $('#addcomment_loading').hide();
-        if (data.result == false) {
-            $('#add_comment_error .msg-text').text(data.message);
+        setTimeout(function () {
+            fillMode();
+            $('#add_comment_error .msg-text').text('هنگام ثبت نظر شما خطایی رخ داد. لطفا کمی دیرتر مجددا تلاش کنید.');
             $('#add_comment_error').show();
             // Reload Captcha
             SampleCaptcha.ReloadImage();
-            $('#Captcha').val('');
+            $('#add_comment_field_captcha').val('');
+        }, 200);
+    }
+
+    function onAddCommentSuccess(data) {
+        if (data.result == false) {
+            setTimeout(function () {
+                fillMode();
+                $('#add_comment_error .msg-text').text(data.message);
+                $('#add_comment_error').show();
+                // Reload Captcha
+                SampleCaptcha.ReloadImage();
+                $('#add_comment_field_captcha').val('');
+            }, 200);
         } else {
             $('#add_comment_error').hide();
-            $('#add_comment_form_con').hide();
+            $('#add_comment_form').hide();
             $('#add_comment_success').show();
         }
     }
