--- a/Squirrel/Squirrel.Web/Views/Issue/Post_Comments.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Issue/Post_Comments.cshtml
@@ -1,29 +1,62 @@
-﻿@using Squirrel.Utility.FarsiTools
+﻿@using Squirrel.Domain.ExtensionMethods
+@using Squirrel.Utility.FarsiTools
+@using Squirrel.Utility.Helpers
 @model IEnumerable<Squirrel.Domain.Enititis.Comment>
+@{
+    var counter = 0;
+}
+
+<div class="topic">نظرات</div>
 
 @foreach (var comment in Model)
 {
     var item = comment;
+    var avatarAddress = string.Empty;
+    if (item.UserId.HasValue)
+    {
+        avatarAddress = item.User.AvatarAddress();
+    }
 
-    <div class="row">
-        <div class="col-md-2 col-sm-3 col-xs-4 rightcol">
-            <div class="avatar-con">
-                @(((PersianDate)item.CreateDate).Day.FaDigit())
-            </div>
-            <div class="name">
-                @Html.DisplayFor(m => item.Name)
+    if (counter > 0)
+    {
+        <div class="hline"></div>
+    }
+
+    <div class="row comment">
+        <div class="col-sm-2 hidden-xs">
+            <div class="avatar">
+                @if (avatarAddress.IsNotNothing())
+                {
+                    <img src="@Url.Content(avatarAddress)" alt="" />
+                }
+                else
+                {
+                    <img src="~/Content/themes/vone/images/generalavatar.png" alt="" />
+                }
             </div>
         </div>
-        <div class="col-md-10 col-sm-9 col-xs-8 leftcol">
+        <div class="col-sm-10">
+            <div class="name">
+                @if (item.UserId.HasValue)
+                {
+                    if (item.UserId == item.Post.AuthorId)
+                    {
+                        <span>نویسنده مطلب :</span>
+                    }
+                    <span>@item.User.ShowName()</span>
+                }
+                @Html.DisplayFor(m => item.Name)
+            </div>
             <div class="date">
-                @(((PersianDate)item.CreateDate).ToStringDateTime().FaDigit())
+                @(((PersianDate)item.CreateDate).ToStringDate().FaDigit())
+                ساعت
+                @(((PersianDate)item.CreateDate).ToStringTime().FaDigit())
             </div>
             <div class="content">
                 @Html.DisplayFor(m => item.Body)
             </div>
         </div>
-        <div class="col-xs-12">
-            <div class="divider-full-1"></div>
-        </div>
     </div>
+
+                counter++;
 }
