--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.css
@@ -3,4 +3,5 @@
 @complementColor: #DF9A89;
 @complementDarkColor: #C0725E;
 @complementDarkestColor: #A4533E;*/
+/* Admin Colors */
 /*# sourceMappingURL=palette.css.map */
