--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
@@ -36,3 +36,8 @@
 @complementDarkColor: #C0725E;
 @complementDarkestColor: #A4533E;*/
 @validationColor: #ea8f73;
+
+/* Admin Colors */
+@mint1Color: #47cfad;
+@mint2Color: #37bc98;
+@bitterSweet1Color: #fc6e51;
