--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
@@ -2,80 +2,45 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link rel="shortcut icon" href="~/Content/themes/vone/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>مدیر سنجاب: @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Styles.Render("~/Content/admin")
+    @RenderSection("scripts", required: false)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
+    <div class="sidemenu tie-menu">
+        @Html.Partial("_SideMenu")
+    </div>
+    <div class="header-con tie-menu">
+        <div class="container-fluid">
+            <div class="row header">
+                @Html.Partial("_Header")
             </div>
         </div>
     </div>
-    <br/>
-    <br/>
-    <br/>
-    <div class="container-fluid body-content">
-        <div class="row">
-            <div class="col-lg-2">
-                <ul style="margin: 30px 0;">
-                    <li>
-                        @Html.ActionLink("Home", "Index", "Panel", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Categories", "Index", "Categories", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Comment", "Index", "Panel", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("File", "Index", "Files", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Post", "Index", "Panel", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Profile", "Index", "Profile", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Publish", "Index", "Publish", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Tag", "Index", "Panel", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Topic", "Index", "Panel", new { area = "author" }, null)
-                    </li>
-                    <li>
-                        @Html.ActionLink("Vote", "Index", "Panel", new { area = "author" }, null)
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-10">
-                <div class="row">
-                    @RenderBody()
-                </div>
+    <div class="mainpart-con tie-menu">
+        <div class="container-fluid">
+            <div class="row mainpart">
+                @RenderBody()
             </div>
         </div>
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    </div>
+    <div class="secondry-content tie-secondry">
+        @Html.Partial("_SecondryContents")
     </div>
 
-    @RenderSection("scripts", required: false)
+    <script type="text/javascript">
+        $(function () {
+            var windowHieght = window.innerHeight;
+            $('.mainpart').css('min-height', windowHieght - 65 + 'px');
+        });
+    </script>
 </body>
 </html>
