--- a/Squirrel/Squirrel.Web/Content/themes/vone/loading.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/loading.css
@@ -3,6 +3,7 @@
 @complementColor: #DF9A89;
 @complementDarkColor: #C0725E;
 @complementDarkestColor: #A4533E;*/
+/* Admin Colors */
 .circularG-con {
   display: inline-block;
   vertical-align: middle;
